# chat-back-end

./: Cargo.toml  README.md
migrations/2023-08-21-022514_users/: down.sql  up.sql
migrations/2023-08-30-021450_create_rooms/: up.sql
migrations/2023-08-30-022620_create_users_room/: down.sql  up.sql
migrations/2023-08-30-031355_create_rooms_message/: down.sql  up.sql
migrations/2023-09-03-072251_alter_rooms_column_name_length/: up.sql
src/: lib.rs  main.rs  messages.rs  middleware.rs  models.rs  schema.rs  session.rs  socket_server.rs
src/config/: auth.rs  database.rs  middleware.rs  mod.rs
src/controllers/: mod.rs
src/controllers/auth/: login.rs  me.rs  mod.rs  register.rs
src/controllers/chat/: create_chat_room.rs  get_chat_list.rs  get_chat_rooms.rs  mod.rs
src/controllers/members/: get_users.rs
src/controllers/users/: create_new_users.rs  get_users.rs  mod.rs
src/controllers/ws/: send_message.rs
src/interface/: global.rs
src/routes/: auth.rs  chat.rs  members.rs  mod.rs  users.rs  ws.rs
src/types/: mod.rs
src/utils/: network.tsx
